--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
-           <ul class="menu-responsive" > 
+            <ul class="menu-responsive" > 
                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
@@ -110,25 +110,26 @@
 
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" type=>
             <h2> TIKTOK</h2>
-            <img src="9icon.png">
+            <i class="fa-brands fa-tiktok"></i>
        </a>
       
        <a href="https://www.facebook.com/" target="_blank">
             <h2>FACEBOOK</h2> 
-                <img class="foco" src="facebookicon.png">
+            <i class="fa-brands fa-facebook-f"></i>
        </a>
        <a href="https://www.youtube.com/" target="_blank">
             <h2>YOUTUBE</h2> 
-                <img class="foco" src="youtubeicon.png">
+            <i class="fa-brands fa-youtube"></i>
        </a>
        <a href="https://www.instagram.com/" target="_blank">
-        <h2>INSTAGRAM</h2>
-        <img class="foco" src="instagramicon.png">
-       </a>
+            <h2>INSTAGRAM</h2>
+            <i class="fa-brands fa-instagram fa-2x1"></i>
+       </a> 
     
     </div>
 
 </footer>
+
 
 <p class="copyright">
     Copyright® <br>
@@ -137,6 +138,3 @@
 
 </body>
 </html> 
-
-
-<!-- Prueba de GIT-->
