--- a/turnos.html
+++ b/turnos.html
@@ -53,18 +53,18 @@
             <p>
                 COMPLETA EL SIGUIENTE FORMULARIO PARA SOLICITAR TU TURNO
             </p>
-                <form>  
+                <form id="form">  
                     <div class="turnos_form_time">
-                        <input type="date" required>
+                        <input type="date">
                         <br>
-                        <input type="time" min="08:00" max="18:00" required>
+                        <input type="time" id="time" min="08:00" max="18:00">
                     </div>
                         <br>
-                        <input type="text" placeholder="Su nombre" required>
+                        <input type="text" id="name" placeholder="Su nombre">
                         <br>
-                        <input type="email" placeholder="Ingrese su Mail" required>
+                        <input type="email" id="email" placeholder="Ingrese su Mail">
                         <br>
-                        <input type="tel" placeholder="Ingrese su telefono de contacto">
+                        <input type="tel" id="tel" placeholder="Ingrese su telefono de contacto">
                         <br>
                         <input type="textarea" placeholder="ACLARACIONES (OPCIONAL)">
                         <br>
@@ -101,21 +101,21 @@
 
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" type=>
             <h2> TIKTOK</h2>
-            <img src="9icon.png">
+            <i class="fa-brands fa-tiktok"></i>
        </a>
       
        <a href="https://www.facebook.com/" target="_blank">
             <h2>FACEBOOK</h2> 
-                <img class="foco" src="facebookicon.png">
+            <i class="fa-brands fa-facebook-f"></i>
        </a>
        <a href="https://www.youtube.com/" target="_blank">
             <h2>YOUTUBE</h2> 
-                <img class="foco" src="youtubeicon.png">
+            <i class="fa-brands fa-youtube"></i>
        </a>
        <a href="https://www.instagram.com/" target="_blank">
-        <h2>INSTAGRAM</h2>
-        <img class="foco" src="instagramicon.png">
-       </a>
+            <h2>INSTAGRAM</h2>
+            <i class="fa-brands fa-instagram fa-2x1"></i>
+       </a> 
     
     </div>
 
