--- a/assets/HTML/contacto.html
+++ b/assets/HTML/contacto.html
@@ -6,33 +6,33 @@
 	<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
 	<link rel="icon" href="Imagenes/Logo-pagina.png">
-	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="/assets/CSS/estilo.css">
+	<link rel="stylesheet" type="text/css" href="/assets/CSS/normalize.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title> Custom Garage - Contacto </title>
+	<title> Custom Garage </title>
 </head>
 <body>
 
 	<!-- ACA EMPIEZA EL HEADER--> 
 
-    <header>
+	<header>
         <b>CUSTOM GARAGE</b>
-       <img class="logo_header" src="Logo.png" alt="Logo de Custom Garage">
+       <img class="logo_header" src="/assets/images/Logo.png" alt="Logo de Custom Garage">
        <nav class="menu">
            <ul class="menu__ul">
-               <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
-           <ul class="menu-responsive" > 
-               <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
+            <ul class="menu-responsive" > 
+                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
            </ul>	
        </div>
        </nav>
@@ -80,6 +80,7 @@
                 <p>CustomGarage@gmail.com</p>
                 <br>
                 <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5522.727532491644!2d-58.38412564314189!3d-34.60837311683637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad04a0b51c1%3A0xe7258a1f1340cbbd!2sAv.%20Rivadavia%201000%2C%20C1002AAU%20CABA!5e0!3m2!1ses-419!2sar!4v1684274947083!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="maps2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8199439277446!2d-58.3805342!3d-34.6087143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad04a0b51c1%3A0xe7258a1f1340cbbd!2sAv.%20Rivadavia%201000%2C%20C1002AAU%20CABA!5e0!3m2!1ses!2sar!4v1684989517182!5m2!1ses!2sar" width="300" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 	</div>
