--- a/assets/HTML/turnos.html
+++ b/assets/HTML/turnos.html
@@ -13,7 +13,7 @@
 
 	<title> Custom Garage </title>
 </head>
-<body>
+<body class="turnos_fondo">
 
 	<!-- ACA EMPIEZA EL HEADER--> 
 
@@ -29,7 +29,7 @@
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
-               <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
+                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
@@ -41,53 +41,42 @@
            <input class="Search__button" type="submit" value="Buscar">
        </form>
    </header>
+   <br>
 
 	<!-- ACA TERMINA EL HEADER--> 
 
+<main>
 
-
-
-    <div class="fondo"> 
-        <img src="/assets/images/moto1.jpg">
-        <img class="logo" src="/assets/images/Logo-pagina.png">
+    <div class="turnos">
+        <h2> GESTIONA TU TURNO </h2>
+            <p>
+                COMPLETA EL SIGUIENTE FORMULARIO PARA SOLICITAR TU TURNO
+            </p>
+                <form id="form">  
+                    <div class="turnos_form_time">
+                        <input type="date">
+                        <br>
+                        <input type="time" id="time" min="08:00" max="18:00">
+                    </div>
+                        <br>
+                        <input type="text" id="name" placeholder="Su nombre">
+                        <br>
+                        <input type="email" id="email" placeholder="Ingrese su Mail">
+                        <br>
+                        <input type="tel" id="tel" placeholder="Ingrese su telefono de contacto">
+                        <br>
+                        <input type="textarea" placeholder="ACLARACIONES (OPCIONAL)">
+                        <br>
+                        <input type="submit" value="Solicitar turno" required>
+                       
+                </form>
     </div>
 
-
-	<div class="index_content">
-
-            <div class="index_content__taller">
-                <h3>VISITA NUESTRO TALLER </h3>
-                <p>ESTAMOS UBICADOS EN RIVADAVIA 1000, CABA. PODES ACERCARTE A VER NUESTRO TALLER Y TRABAJOS.</p>
-                <img src="/assets/images/Taller.jpg"> 
-            </div>
-
-
-        <a href="/assets/HTML/garage.html">
-            <div class="index_content__taller">
-                <h3>MIRA NUESTRO GARAGE</h3>
-                <p>DONDE PODRAS VER VARIOS TRABAJOS PARA CLIENTES Y AMIGOS DEL GARAGE.</p>
-                <img src="/assets/images/Garage4.jpg"> 
-            </div>
-        </a>
-        <a href="/assets/HTML/turnos.html">
-            <div class="index_content__taller">
-                <h3> GESTIONA TU TURNO </h3>
-                <p> REALIZAMOS MANTENIMIENTO Y MODIFICACIONES EN TODO TIPO DE MOTOS </p>
-                <img src="/assets/images/Motos/fondo_turnos.jpg"> 
-            </div>
-        </a>
-        <a href="/assets/HTML/contacto.html">
-            <div class="index_content__taller">
-                <h3>CONTANOS DE TU PROYECTO </h3>
-                <p>SI NO PODES PASAR POR EL LOCAL, ESCRIBINOS Y CONTANOS TU PROYECTO</p>
-                <img src="/assets/images/Garage1.jpg"> 
-            </div>
-        </a>
-	</div>
+</main>
+	
 	
 
 
-	
 <!-- ACA TERMINA EL CONTENT -->
 
 
