--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
 	<link rel="icon" href="Imagenes/Logo-pagina.png">
-	<link rel="stylesheet" type="text/css" href="../assets/CSS/estilo.css">
+	<link rel="stylesheet" type="text/css" href="/assets/CSS/estilo.css">
 	<link rel="stylesheet" type="text/css" href="/assets/CSS/normalize.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
