Correccion de direcciones

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
 	<link rel="icon" href="/assets/images/Logo-pagina.png">
 	<link rel="stylesheet" type="text/css" href="assets/CSS/estilo.css">
-	<link rel="stylesheet" type="text/css" href="/assets/CSS/normalize.css">
+	<link rel="stylesheet" type="text/css" href="assets/CSS/normalize.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -19,20 +19,20 @@
 
 	<header>
         <b>CUSTOM GARAGE</b>
-       <img class="logo_header" src="/assets/images/Logo.png" alt="Logo de Custom Garage">
+       <img class="logo_header" src="assets/images/Logo.png" alt="Logo de Custom Garage">
        <nav class="menu">
            <ul class="menu__ul">
-               <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="assets/HTML/garage.html">GARAGE</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="assets/HTML/turnos.html">TURNOS</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="assets/HTML/contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="assets/HTML/garage.html">GARAGE</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="assets/HTML/turnos.html">TURNOS</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="assets/HTML/contacto.html">CONTACTO</a></li>
            </ul>	
        </div>
        </nav>
@@ -48,8 +48,8 @@
 
 
     <div class="fondo"> 
-        <img src="/assets/images/moto1.jpg">
-        <img class="logo" src="/assets/images/Logo-pagina.png">
+        <img src="assets/images/moto1.jpg">
+        <img class="logo" src="assets/images/Logo-pagina.png">
     </div>
 
 
@@ -58,29 +58,29 @@
             <div class="index_content__taller">
                 <h3>VISITA NUESTRO TALLER </h3>
                 <p>ESTAMOS UBICADOS EN RIVADAVIA 1000, CABA. PODES ACERCARTE A VER NUESTRO TALLER Y TRABAJOS.</p>
-                <img src="/assets/images/Taller.jpg"> 
+                <img src="assets/images/Taller.jpg"> 
             </div>
 
 
-        <a href="/assets/HTML/garage.html">
+        <a href="assets/HTML/garage.html">
             <div class="index_content__taller">
                 <h3>MIRA NUESTRO GARAGE</h3>
                 <p>DONDE PODRAS VER VARIOS TRABAJOS PARA CLIENTES Y AMIGOS DEL GARAGE.</p>
-                <img src="/assets/images/Garage4.jpg"> 
+                <img src="assets/images/Garage4.jpg"> 
             </div>
         </a>
-        <a href="/assets/HTML/turnos.html">
+        <a href="assets/HTML/turnos.html">
             <div class="index_content__taller">
                 <h3> GESTIONA TU TURNO </h3>
                 <p> REALIZAMOS MANTENIMIENTO Y MODIFICACIONES EN TODO TIPO DE MOTOS </p>
-                <img src="/assets/images/Motos/fondo_turnos.jpg"> 
+                <img src="assets/images/Motos/fondo_turnos.jpg"> 
             </div>
         </a>
-        <a href="/assets/HTML/contacto.html">
+        <a href="assets/HTML/contacto.html">
             <div class="index_content__taller">
                 <h3>CONTANOS DE TU PROYECTO </h3>
                 <p>SI NO PODES PASAR POR EL LOCAL, ESCRIBINOS Y CONTANOS TU PROYECTO</p>
-                <img src="/assets/images/Garage1.jpg"> 
+                <img src="assets/images/Garage1.jpg"> 
             </div>
         </a>
 	</div>
