--- a/assets/HTML/garage.html
+++ b/assets/HTML/garage.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
-	<link rel="icon" href="Imagenes/Logo-pagina.png">
-	<link rel="stylesheet" type="text/css" href="/assets/CSS/estilo.css">
-	<link rel="stylesheet" type="text/css" href="/assets/CSS/normalize.css">
+	<link rel="icon" href="assets/images/Logo-pagina.png">
+	<link rel="stylesheet" type="text/css" href="../CSS/estilo.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/normalize.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,16 +23,16 @@
        <nav class="menu">
            <ul class="menu__ul">
                <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="../HTML/turnos.html">TURNOS</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="../HTML/contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="../HTML/turnos.html">TURNOS</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="../HTML/contacto.html">CONTACTO</a></li>
            </ul>	
        </div>
        </nav>
