--- a/assets/HTML/garage.html
+++ b/assets/HTML/garage.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
-	<link rel="icon" href="assets/images/Logo-pagina.png">
+	<link rel="icon" href="../images/Logo-pagina.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/estilo.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/normalize.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
@@ -19,20 +19,20 @@
 
 	<header>
         <b>CUSTOM GARAGE</b>
-       <img class="logo_header" src="/assets/images/Logo.png" alt="Logo de Custom Garage">
+       <img class="logo_header" src="../images/Logo.png" alt="Logo de Custom Garage">
        <nav class="menu">
            <ul class="menu__ul">
                <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
                <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="../HTML/turnos.html">TURNOS</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="../HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="../HTML/turnos.html">TURNOS</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="../HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
            </ul>	
        </div>
        </nav>
@@ -50,57 +50,57 @@
 
         <div class="garage_intro">
                 <h2>BIENVENIDOS A NUESTRO GARAGE</h2>
-                <img src="/assets/images/Logo.png" alt="logo">
+                <img src="../images/Logo.png" alt="logo">
 
         </div>
 
         <div class="garage_cont">
                 <h2> ROYAL ENFIELD INTERCEPTOR 650CC -RAT-</h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto1.jpg">
-                <img src="/assets/images/Motos/moto1-2.jpg">
-                <img src="/assets/images/Motos/moto1-3.jpg">
+                <img src="../images/Motos/moto1.jpg">
+                <img src="../images/Motos/moto1-2.jpg">
+                <img src="../images/Motos/moto1-3.jpg">
             </div>
         </div>
         <div class="garage_cont">
                 <h2> ROYAL ENFIELD INTERCEPTOR 650CC -CLASSIC-</h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto2.jpg">
-                <img src="/assets/images/Motos/moto2-1.jpg">
-                <img src="/assets/images/Motos/moto2-2.jpg">
+                <img src="../images/Motos/moto2.jpg">
+                <img src="../images/Motos/moto2-1.jpg">
+                <img src="../images/Motos/moto2-2.jpg">
             </div>
         </div>
         <div class="garage_cont">
                 <h2> ROYAL ENFIELD INTERCEPTOR 650CC -RED-</h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto3.jpg">
-                <img src="/assets/images/Motos/moto3-1.jpg">
-                <img src="/assets/images/Motos/moto3-2.jpg">
+                <img src="../images/Motos/moto3.jpg">
+                <img src="../images/Motos/moto3-1.jpg">
+                <img src="../images/Motos/moto3-2.jpg">
             </div>
         </div>
         <div class="garage_cont">
             <h2> ROYAL ENFIELD INTERCEPTOR 650CC -MAMBANEGRA- </h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto4.jpg">
-                <img src="/assets/images/Motos/moto4-1.jpg">
-                <img src="/assets/images/Motos/moto4-2.jpg">
+                <img src="../images/Motos/moto4.jpg">
+                <img src="../images/Motos/moto4-1.jpg">
+                <img src="../images/Motos/moto4-2.jpg">
             </div>
         </div>
         <div class="garage_cont">
             <h2> ROYAL ENFIELD INTERCEPTOR 650CC -STREET-</h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto5.jpg">
-                <img src="/assets/images/Motos/moto5-1.jpg">
-                <img src="/assets/images/Motos/moto5-2.jpg">
+                <img src="../images/Motos/moto5.jpg">
+                <img src="../images/Motos/moto5-1.jpg">
+                <img src="../images/Motos/moto5-2.jpg">
 
             </div>
         </div>
         <div class="garage_cont">
             <h2> ROYAL ENFIELD INTERCEPTOR 650CC -TRACKER-</h2>
             <div class="garage_cont_img">
-                <img src="/assets/images/Motos/moto6.jpg">
-                <img src="/assets/images/Motos/moto6-1.jpg">
-                <img src="/assets/images/Motos/moto6-2.jpg">
+                <img src="../images/Motos/moto6.jpg">
+                <img src="../images/Motos/moto6-1.jpg">
+                <img src="../images/Motos/moto6-2.jpg">
             </div>
         </div>
 
