--- a/assets/HTML/turnos.html
+++ b/assets/HTML/turnos.html
@@ -23,16 +23,16 @@
        <nav class="menu">
            <ul class="menu__ul">
                <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
+               <li class="menu__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
                 <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="/assets/HTML/garage.html">GARAGE</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="/assets/HTML/turnos.html">TURNOS</a></li>
-               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="/assets/HTML/contacto.html">CONTACTO</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="garage.html">GARAGE</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="turnos.html">TURNOS</a></li>
+               <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="contacto.html">CONTACTO</a></li>
            </ul>	
        </div>
        </nav>
