--- a/assets/HTML/turnos.html
+++ b/assets/HTML/turnos.html
@@ -19,7 +19,7 @@
 
 	<header>
         <b>CUSTOM GARAGE</b>
-       <img class="logo_header" src="/assets/images/Logo.png" alt="Logo de Custom Garage">
+       <img class="logo_header" src="../images/Logo.png" alt="Logo de Custom Garage">
        <nav class="menu">
            <ul class="menu__ul">
                <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
