--- a/assets/HTML/turnos.html
+++ b/assets/HTML/turnos.html
@@ -8,18 +8,19 @@
 	<link rel="icon" href="assets/images/Logo-pagina.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/estilo.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/media.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script async src="../JS/script.js"></script>
 	<title> Custom Garage </title>
 </head>
 <body class="turnos_fondo">
 
-	<!-- ACA EMPIEZA EL HEADER--> 
+	<!-- COMIENZA HEADER--> 
 
 	<header>
         <b>CUSTOM GARAGE</b>
-       <img class="logo_header" src="/assets/images/Logo.png" alt="Logo de Custom Garage">
+       <img class="logo_header" src="../images/Logo.png" alt="Logo de Custom Garage">
        <nav class="menu">
            <ul class="menu__ul">
                <li class="menu__li"> <i class="fa-solid fa-house"></i><a href="../../index.html">HOME</a></li>
@@ -43,41 +44,41 @@
    </header>
    <br>
 
-	<!-- ACA TERMINA EL HEADER--> 
+	<!-- TERMINA EL HEADER // COMIENZA EL MAIN  --> 
 
-<main>
+    <main>
 
-    <div class="turnos">
-        <h2> GESTIONA TU TURNO </h2>
-            <p>
-                COMPLETA EL SIGUIENTE FORMULARIO PARA SOLICITAR TU TURNO
-            </p>
-                <form id="form">  
-                    <div class="turnos_form_time">
-                        <input type="date">
-                        <br>
-                        <input type="time" id="time" min="08:00" max="18:00">
-                    </div>
-                        <br>
-                        <input type="text" id="name" placeholder="Su nombre">
-                        <br>
-                        <input type="email" id="email" placeholder="Ingrese su Mail">
-                        <br>
-                        <input type="tel" id="tel" placeholder="Ingrese su telefono de contacto">
-                        <br>
-                        <input type="textarea" placeholder="ACLARACIONES (OPCIONAL)">
-                        <br>
-                        <input type="submit" value="Solicitar turno" required>
-                       
-                </form>
-    </div>
+        <div class="turnos">
+            <h2> GESTIONA TU TURNO </h2>
+                <p>
+                    COMPLETA EL SIGUIENTE FORMULARIO PARA SOLICITAR TU TURNO
+                </p>
+                    <form>  
+                        <div class="turnos_form_time">
+                            <input type="date">
+                            <br>
+                            <input type="time" id="time" min="08:00" max="18:00">
+                        </div>
+                            <br>
+                            <input type="text" id="name" placeholder="Su nombre">
+                            <br>
+                            <input type="email" id="email" placeholder="Ingrese su Mail">
+                            <br>
+                            <input type="tel" id="tel" placeholder="Ingrese su telefono de contacto">
+                            <br>
+                            <input type="textarea" placeholder="ACLARACIONES (OPCIONAL)">
+                            <br>
+                            <input type="submit" value="Solicitar turno" required>
+                        
+                    </form>
+        </div>
 
-</main>
+    </main>
 	
 	
 
 
-<!-- ACA TERMINA EL CONTENT -->
+<!--  TERMINA MAIN // COMIENZA FOOTER -->
 
 
 
