--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="assets/images/Logo-pagina.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/estilo.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/normalize.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/media.css">
+    <link rel="stylesheet" type="text/css" href="/assets/CSS/media.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="/assets/JS/script.js"></script>
