--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 	<meta name="description" content="Custom Garage - Nos dedicamos a la customizacion de motos. Vos la diseñas nosotros la hacemos realidad">
 	<link rel="icon" href="assets/images/Logo-pagina.png">
 	<link rel="stylesheet" type="text/css" href="assets/CSS/estilo.css">
-	<link rel="stylesheet" type="text/css" href="assetsCSS/normalize.css">
+	<link rel="stylesheet" type="text/css" href="assets/CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="assets/CSS/media.css">
 	<script src="https://kit.fontawesome.com/e912bc3fa4.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="/assets/JS/script.js"></script>
+    <script async src="assets/JS/script.js"></script>
 	<title> Custom Garage </title>
 </head>
 <body>
 
-	<!-- ACA EMPIEZA EL HEADER--> 
+	<!-- COMIENZA EL HEADER--> 
 
 	<header>
         <b>CUSTOM GARAGE</b>
@@ -30,7 +30,7 @@
            </ul>
        <div class="menu-responsive">
             <ul class="menu-responsive" > 
-               <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
+                <li class="menu-responsive__li"> <i class="fa-solid fa-house"></i><a href="index.html">HOME</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-screwdriver-wrench"></i><a href="assets/HTML/garage.html">GARAGE</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-calendar"></i><a href="assets/HTML/turnos.html">TURNOS</a></li>
                <li class="menu-responsive__li"> <i class="fa-solid fa-address-card"></i><a href="assets/HTML/contacto.html">CONTACTO</a></li>
@@ -42,7 +42,8 @@
            <input class="Search__button" type="submit" value="Buscar">
        </form>
    </header>
-
+   <br>
+ 
 	<!-- TERMINA EL HEADER // COMIENZA MAIN--> 
 
     <main>
